<resources>
    <string name="app_name">KarKonnex</string>
    <string name="find_your_perfect_ride_securely">Find your perfect ride securely</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="rent_buy_sell_cars">Rent Buy Sell Cars</string>
    <string name="please_login_if_already_member">Please <annotation action="login">LOGIN</annotation> if already Member</string>
    <string name="or">Or</string>
    <string name="join_matcheron_free_signup">Join KarKonnex Free <annotation action="signup">SIGNUP</annotation></string>
    <string name="login_account">Login Account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="by_proceeding_to_use_matcheron_you_agree_to_our_terms_and_privacy_policy">By proceeding to use KarKonnex, you agree to our <annotation action="term">Terms</annotation> and <annotation action="privacy">Privacy Policy</annotation></string>
    <string name="email_is_required">Email is required</string>
    <string name="email_is_invalid">Email is invalid</string>
    <string name="password_is_required">Password is required</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="user_responsibility">User Responsibility:</string>
    <string name="private_owner">Private Owner</string>
    <string name="company_dealer">Company/Dealer</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="company">Company</string>
    <string name="username">Username</string>
    <string name="telephone">Telephone</string>
    <string name="visible">Visible</string>
    <string name="hide">Hide</string>
    <string name="location_address">Location Address</string>
    <string name="city">City</string>
    <string name="zip_code">Zip Code</string>
    <string name="country">Country</string>
    <string name="address">Address</string>
    <string name="united_states">United States</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="sign_up">Sign Up</string>
    <string name="fake_or_spam_profile_will_be_deleted_and_user_banned">Fake or Spam Profile will be deleted and user banned</string>
    <string name="permission_access_device_image_denied">Permission Access Device Image denied</string>
    <string name="permission_access_camera_denied">Permission access camera denied</string>
    <string name="last_name_is_required">Last Name is required</string>
    <string name="first_name_is_required">First Name is required</string>
    <string name="company_is_required">Company is required</string>
    <string name="username_is_required">Username is required</string>
    <string name="telephone_is_required">Telephone is required</string>
    <string name="location_address_is_required">Location Address is required</string>
    <string name="city_is_required">City is required</string>
    <string name="zip_code_is_required">Zip Code is required</string>
    <string name="state_is_required">State is required</string>
    <string name="profile_photo_is_required">Profile Photo is required</string>
    <string name="submit">Submit</string>
    <string name="state">State</string>
    <string name="_1_1_rental_agreement">1.1. Rental Agreement:</string>
    <string name="term_des1">karkonnex.com is solely a platform to connect renters and landlords. Users are responsible for conducting their due diligence and making informed decisions before entering into any rental agreement.</string>
    <string name="_1_2_verification">1.2. Verification:</string>
    <string name="term_des2">karkonnex does not endorse or verify the accuracy of Car listings, rental terms, or the identity of users. It is the responsibility of renters and landlords to verify each other\'s information and authenticity.</string>
    <string name="_1_3_rental_inspection">1.3. Rental Inspection:</string>
    <string name="term_des3">Renters are encouraged to inspect Car thoroughly before making any commitments, ensuring that the Car meets their needs and expectations.</string>
    <string name="no_liability_for_damages">No Liability for Damages:</string>
    <string name="_2_1">2.1.</string>
    <string name="term_des4">karkonnex.com is not responsible for any damages, losses, or disputes arising from rental agreements between users on our platform. Users enter into rental agreements at their own risk.</string>
    <string name="term_des5">karkonnex.com is not liable for any financial losses, physical damages, or personal injuries resulting from the use of our website or app.</string>
    <string name="_2_2">2.2.</string>
    <string name="term_des6">karkonnex.com does not mediate or take any responsibility for disputes between renters and landlords, including but not limited to Car condition, rental payments, or lease violations.</string>
    <string name="_2_3">2.3.</string>
    <string name="platform_services">Platform Services:</string>
    <string name="term_des7">karkonnex.com is not a party to any rental transactions conducted through the platform. We do not provide rental or real estate services, and any agreements made between users are independent of karkonnex.com.</string>
    <string name="_3_1">3.1.</string>
    <string name="term_des8">karkonnex.com does not guarantee the availability, accuracy, or suitability of any Car listings, rental rates, or Car amenities.</string>
    <string name="_3_2">3.2.</string>
    <string name="term_des9">karkonnex.com reserves the right to modify, suspend, or discontinue any part of the platform\'s services without prior notice.</string>
    <string name="_3_3">3.3.</string>
    <string name="third_party_content">Third-Party Content:</string>
    <string name="_4_1">4.1.</string>
    <string name="term_des10">karkonnex.com may contain links to third-party websites or services for informational purposes. These links do not imply our endorsement of those websites or their content. Users access third-party websites at their own risk.</string>
    <string name="use_of_platform">Use of Platform:</string>
    <string name="_5_1">5.1.</string>
    <string name="term_des11">Users must comply with all applicable laws and regulations when using karkonnex.com. Any misuse of the platform or violation of our terms of service may result in the suspension or termination of a user\'s account.</string>
    <string name="_5_2">5.2.</string>
    <string name="term_des12">Users must not engage in any fraudulent activities or attempt to deceive others through the platform.</string>
    <string name="privacy">Privacy:</string>
    <string name="_6_1">6.1.</string>
    <string name="term_des13">karkonnex.com values user privacy and takes all reasonable measures to protect personal information. For more details, please refer to our Privacy Policy.</string>
    <string name="indemnification">Indemnification:</string>
    <string name="_7_1">7.1.</string>
    <string name="term_des14">By using karkonnex.com, users agree to indemnify and hold karkonnex.com, its affiliates, officers, directors, employees, and agents harmless from any claims, liabilities, damages, expenses, and legal fees arising from their use of the platform or violation of this disclaimer.</string>
    <string name="changes_to_the_disclaimer">Changes to the Disclaimer:</string>
    <string name="_8_1">8.1.</string>
    <string name="term_des15">karkonnex.com may update this disclaimer as needed, and the most recent version will be posted on our website. Users are encouraged to review this disclaimer periodically.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="information_we_collect">Information We Collect:</string>
    <string name="_1_1_personal_information">1.1. Personal Information:</string>
    <string name="privacy_des1">When you sign up for an account or use our services, we may collect personal information such as your name, email address, phone number, and location. This data is necessary to create and manage your account, facilitate communication with property owners/renters, and improve your overall experience.</string>
    <string name="_1_2_rental_preferences">1.2. Rental Preferences:</string>
    <string name="privacy_des2">To provide you with relevant rental options, we may collect information about your rental preferences, such as location, rental duration, and specific amenities you\'re looking for.</string>
    <string name="_1_3_car_listings">1.3. Car Listings:</string>
    <string name="privacy_des3">Car owners can submit rental listings that may contain information about their Car, including images, descriptions, and rental terms.</string>
    <string name="_1_4_usage_data">1.4. Usage Data:</string>
    <string name="privacy_des4">We may collect data on how you interact with our platform, including page views, clicks, search queries, and other activities, to analyze user behavior and improve our services.</string>
    <string name="how_we_use_your_information">How We Use Your Information:</string>
    <string name="_2_1_personalization">2.1. Personalization:</string>
    <string name="privacy_des5">The data we collect allows us to personalize your rental search experience by showing you relevant listings based on your preferences.</string>
    <string name="_2_2_communication">2.2. Communication:</string>
    <string name="privacy_des6">We use your contact information to facilitate communication between Car owners and renters, ensuring a seamless rental process.</string>
    <string name="_2_3_improve_services">2.3. Improve Services:</string>
    <string name="privacy_des7">By analyzing user behavior, we can identify areas for improvement and enhance our website and app to better meet your needs.</string>
    <string name="_2_4_legal_obligations">2.4. Legal Obligations:</string>
    <string name="privacy_des8">We may use and disclose your information as required by law, such as responding to legal requests and protecting our rights and users\' safety.</string>
    <string name="data_security">Data Security:</string>
    <string name="_3_1_encryption">3.1. Encryption:</string>
    <string name="privacy_des9">We employ industry-standard encryption and security measures to protect your data from unauthorized access or disclosure.</string>
    <string name="_3_2_access_control">3.2. Access Control:</string>
    <string name="privacy_des10">Access to personal information is restricted to authorized personnel only, ensuring that your data remains confidential.</string>
    <string name="_3_3_third_party_services">3.3. Third-Party Services:</string>
    <string name="privacy_des11">We work with reputable third-party service providers who also follow strict security protocols to process your data securely.</string>
    <string name="sharing_your_information">Sharing Your Information:</string>
    <string name="_4_1_car_listings">4.1. Car Listings:</string>
    <string name="privacy_des12">When you create a rental listing as a Car owner, the information provided, excluding personal contact details, becomes accessible to potential renters.</string>
    <string name="_4_2_communication">4.2. Communication:</string>
    <string name="privacy_des13">Your contact information may be shared with other users (Car owners or renters) during the communication process to facilitate rental inquiries.</string>
    <string name="_4_3_aggregated_data">4.3. Aggregated Data:</string>
    <string name="rent">Rent</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="inquiry">Inquiry</string>
</resources>