<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FrmTerm"
    android:background="@color/white"
    android:padding="@dimen/dp_15">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_responsibility"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_1_rental_agreement"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des1"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_2_verification"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des2"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_1_3_rental_inspection"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des3"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_liability_for_damages"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des4"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_2"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des5"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_2_3"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des6"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/platform_services"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des7"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_2"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des8"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_3_3"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des9"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/third_party_content"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_4_1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des10"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_of_platform"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des11"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_5_2"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des12"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_6_1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des13"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indemnification"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_7_1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des14"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
        <TextView
            android:layout_marginTop="@dimen/dp_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/changes_to_the_disclaimer"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_marginTop="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_8_1"
            android:textColor="@color/black"
            android:textSize="@dimen/sp_16"
            android:fontFamily="@font/montserrat_bold"/>
        <TextView
            android:layout_marginBottom="@dimen/dp_15"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/term_des15"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat_medium"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.core.widget.NestedScrollView>