<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.FrmInquire"
    android:orientation="vertical">
    <com.google.android.material.button.MaterialButton
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/rent"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/dp_25"
        android:id="@+id/bt_rent"
        android:textSize="@dimen/sp_18"
        android:fontFamily="@font/montserrat_medium"
        android:backgroundTint="@color/red"/>
    <com.google.android.material.button.MaterialButton
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/buy"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/dp_25"
        android:id="@+id/bt_buy"
        android:textSize="@dimen/sp_18"
        android:fontFamily="@font/montserrat_medium"
        android:backgroundTint="@color/blue"/>
    <com.google.android.material.button.MaterialButton
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_55"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/sell"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/white"
        app:cornerRadius="@dimen/dp_25"
        android:id="@+id/bt_sell"
        android:textSize="@dimen/sp_18"
        android:backgroundTint="@color/orange1"/>
</LinearLayout>