<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.authentication.GetStarted"
    android:background="@color/white"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    >
    <TextView
        android:layout_marginTop="@dimen/dp_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp_18"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/find_your_perfect_ride_securely"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/color_primary"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="@dimen/dp_10"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
            android:paddingHorizontal="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inquiry"
            android:textColor="@color/white"
            android:id="@+id/bt_to_inquire"
            android:backgroundTint="@color/green"
            app:cornerRadius="@dimen/dp_5"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_bold"/>
        <com.google.android.material.button.MaterialButton
            android:layout_marginStart="@dimen/dp_10"
            android:paddingHorizontal="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:id="@+id/bt_to_register"
            android:backgroundTint="@color/color_primary"
            app:cornerRadius="@dimen/dp_5"
            android:textAllCaps="false"
            android:fontFamily="@font/montserrat_bold"/>
        <com.google.android.material.button.MaterialButton
            android:paddingHorizontal="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/login"
            android:layout_marginStart="@dimen/dp_10"
            android:textColor="@color/white"
            android:id="@+id/bt_to_login"
            android:backgroundTint="@color/color_accent"
            app:cornerRadius="@dimen/dp_5"
            android:fontFamily="@font/montserrat_bold"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
    <ImageView
        android:layout_marginTop="@dimen/dp_5"
        android:layout_width="@dimen/dp_240"
        android:layout_height="@dimen/dp_50"
        android:src="@drawable/img_logo"
        android:layout_gravity="center_horizontal"/>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rcv"/>
</androidx.appcompat.widget.LinearLayoutCompat>