<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:background="@drawable/bg_popup_rq_login"
        android:padding="@dimen/dp_20"
        android:layout_marginHorizontal="@dimen/dp_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"
            android:layout_width="@dimen/dp_180"
            android:layout_height="@dimen/dp_45"
            android:src="@drawable/img_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_primary"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:fontFamily="@font/montserrat_medium"
            android:id="@+id/tv_to_login"
            android:text="@string/please_login_if_already_member"
            android:layout_marginVertical="@dimen/dp_20"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_primary"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/or"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/color_primary"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:fontFamily="@font/montserrat_medium"
            android:id="@+id/tv_to_signup"
            android:text="@string/join_matcheron_free_signup"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginBottom="@dimen/dp_10"/>
    </androidx.appcompat.widget.LinearLayoutCompat>
</RelativeLayout>